<resources>
    <string name="app_name">Money Management</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_schedules">Schedules</string>
    <string name="title_profil">Profil</string>
    <string name="title_saves">Economies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adding_spending_text">Adding</string>
    <string name="save_button">Save</string>
    <string name="new_deposit">New Deposit</string>
</resources>
