<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_spendings"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_saves"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_saves" />

    <item
        android:id="@+id/navigation_schedules"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_schedules" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/title_profil" />

</menu>
